--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd server && npm run dev\" \"cd client && npm run start\n",
+    "client:install": "cd client && npm install",
+    "client:build": "cd client && npm run build",
     "server": "cd server && npm run dev",
     "client": "cd client && npm start"
   },
